# aerial-autonomy-stack

./: .dockerignore  .gitignore  README.md
.github/workflows/: clang-tidy-aircraft-amd64-build.yml  clang-tidy-ground-amd64-build.yml  cleanup-old-packages.yml  ground-amd64-build.yml  shell-and-python-linting.yml  simulation-amd64-build.yml
aas-gym/: pyproject.toml
aas-gym/src/aas_gym/: aas_env.py
aircraft/: aircraft.yml.erb
aircraft/aircraft_resources/comms/: zenoh_config_air.json5.erb
aircraft/aircraft_resources/missions/: condition.yaml  inf_loiter.yaml  test.yaml  yalla.yaml
aircraft/aircraft_resources/scripts/: analyze_bag.sh  gymnasium_setup.py  inspect_topics.py
aircraft/aircraft_ws/src/drone_traffic_client/: CMakeLists.txt  package.xml
aircraft/aircraft_ws/src/drone_traffic_client/src/: dtc_client_node.cpp
ground/: ground.yml.erb
ground/ground_resources/comms/: zenoh_config_ground.json5
ground/ground_ws/src/drone_traffic_controller/: package.xml  setup.cfg  setup.py
ground/ground_ws/src/drone_traffic_controller/drone_traffic_controller/: dtc_controller_node.py
simulation/: simulation.yml.erb
simulation/simulation_resources/aircraft_models/: create_sdfs_using_sensor_config.rb  (+1 more)
tools_and_docs/: deploy_build.sh  deploy_run.sh  plot_logs.py  sim_build.sh  sim_run.sh
tools_and_docs/docker/: aircraft.dockerfile  ground.dockerfile  simulation.dockerfile
tools_and_docs/docs/: BOM.md  RATIONALE.md  REQUIREMENTS_UBUNTU.md  REQUIREMENTS_WSL.md  SETUP_AVIONICS.md  SETUP_CHRONY.md
tools_and_docs/tests/: .clang-tidy  check_requirements.sh
(+31 files in other folders)
